# acs-pums-explorer

./: .gitignore  DATA_CATALOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/parquet/: acs_b01002_county_2020_2024.parquet  acs_b01003_county_2020_2024.parquet  acs_b03002_county_2020_2024.parquet  acs_b11016_county_2020_2024.parquet  acs_b15003_county_2020_2024.parquet  acs_b19001_county_2020_2024.parquet  acs_b19013_county_2020_2024.parquet  acs_b23025_county_2020_2024.parquet  acs_b25001_county_2020_2024.parquet  acs_b25002_county_2020_2024.parquet  acs_b25003_county_2020_2024.parquet  acs_b25024_county_2020_2024.parquet  acs_b25034_county_2020_2024.parquet  acs_b25041_county_2020_2024.parquet  acs_b25064_county_2020_2024.parquet  acs_b25075_county_2020_2024.parquet  acs_b25077_county_2020_2024.parquet  puma_cbsa_crosswalk.parquet
data/parquet/pums/: h_01.parquet  h_02.parquet  h_04.parquet  h_05.parquet  h_06.parquet  h_08.parquet  h_09.parquet  h_10.parquet  h_11.parquet  h_12.parquet  h_13.parquet  h_15.parquet  h_16.parquet  h_17.parquet  h_18.parquet  h_19.parquet  h_20.parquet  h_21.parquet  h_22.parquet  (+83 more)
pipeline/: _acs_common.py  acs_b01002.py  acs_b01003.py  acs_b03002.py  acs_b11016.py  acs_b15003.py  acs_b19001.py  acs_b19013.py  acs_b23025.py  acs_b25001.py  acs_b25002.py  acs_b25003.py  acs_b25024.py  acs_b25034.py  acs_b25041.py  acs_b25064.py  acs_b25075.py  acs_b25077.py  bank_raw.py  puma_cbsa.py  pums_ingest.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: duckdb.ts  main.ts  topics.ts
(+1 files in other folders)
